--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
-      /* Tablet ist weg -> Textfarbe jetzt schwarz */
-      --ui-text: rgba(0,0,0,0.90);
+      /* ✅ UI-Tablett: SCHWARZ/DUNKEL @ 6% */
+      --ui-panel-bg: rgba(0,0,0,0.06);
+      --ui-panel-border: rgba(0,0,0,0.35);
+
+      --ui-text: #ead7be; /* hellbeige */
 
       --rotSign: 1;
       --rot: 0deg;
@@ -285,6 +288,7 @@
       z-index: 9;
     }
 
+    /* ===== Slot Typo (Referenz) ===== */
     .slot .num > span{
       display:inline-flex;
       align-items:center;
@@ -313,6 +317,7 @@
     .slot .num > span .d{ display:inline-block; line-height: 1; }
     .slot .num > span.num11 .d + .d{ margin-left: -0.18em; }
     .slot .num > span.num10 .d + .d{ margin-left: -0.10em; }
+
     .slot .num > span.num12 .d + .d{ margin-left: -3px; }
 
     .slot .num > span.dot::after{
@@ -418,16 +423,18 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* ========= UI PANEL (Tablet weg -> nur Layoutcontainer) ========= */
+    /* ========= UI PANEL ========= */
     .uiPanel{
       width: 100%;
       box-sizing: border-box;
       padding: 12px 12px 10px;
-      border-radius: 0;
-      border: none;
-      background: transparent;     /* WEG */
-      backdrop-filter: none;       /* WEG */
-      box-shadow: none;            /* WEG */
+      border-radius: 16px;
+      border: 1px solid var(--ui-panel-border);
+      background: var(--ui-panel-bg);
+      backdrop-filter: blur(6px);
+      box-shadow:
+        0 12px 22px rgba(0,0,0,0.22),
+        0 0 0 1px rgba(255,255,255,0.10) inset;
       display:flex;
       flex-direction: column;
       gap: 10px;
@@ -435,7 +442,7 @@
 
     .uiRow{
       display:flex;
-      align-items:center;
+      align-items:flex-end;
       justify-content: space-between;
       gap: 10px;
     }
@@ -445,69 +452,89 @@
       letter-spacing: 0.04em;
       color: var(--ui-text);
       user-select:none;
-      text-shadow: 0 1px 0 rgba(255,255,255,0.30);
-    }
-
-    .mini{
-      font-size: 12px;
-      font-weight: 800;
-      opacity: 0.92;
-      color: var(--ui-text);
-      text-shadow: 0 1px 0 rgba(255,255,255,0.30);
+      text-shadow: 0 1px 0 rgba(0,0,0,0.25);
+      font-size: 22px;
+      line-height: 1.05;
     }
 
     .targetCard{
       display:flex;
-      align-items:center;
+      align-items:flex-end;
       gap: 10px;
-      margin-left: auto;
+      margin-left: 0;
     }
 
-    /* Ziel-Quadrat bleibt wie jetzt (dein Stand) */
+    /* ✅ Ziel-Text: exakt "(00/11)" */
+    .progressText{
+      color: var(--ui-text);
+      font-weight: 900;
+      font-size: 18px;
+      line-height: 1.05;
+      letter-spacing: 0.02em;
+      font-variant-numeric: tabular-nums;
+      user-select:none;
+      text-shadow: 0 1px 0 rgba(0,0,0,0.25);
+      min-width: 64px; /* stabil, nichts springt */
+      text-align:left;
+    }
+
+    /* ✅ Blaues Quadrat: scharfe Ecken + beiger Innenrahmen (2px), KEIN Außenrahmen */
     .targetSquare{
       width: 44px;
       height: 44px;
-      border-radius: 10px;
+      border-radius: 0px;
       background: var(--blau);
-      border: 2px solid rgba(0,0,0,0.55);
+      border: 0;
       box-shadow:
+        inset 0 0 0 2px var(--btn-bg),
         0 6px 12px rgba(0,0,0,0.18),
         0 0 0 1px rgba(255,255,255,0.18) inset;
       display:flex;
       align-items:center;
       justify-content:center;
-      font-weight: 1000;
-      font-size: 22px;
-      color: #0b0b0b;
+      user-select:none;
+    }
+
+    /* ✅ Zahl im Quadrat: exakt Slot-Typo (Gewicht/Größe) */
+    .targetSquare span{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      font-weight: 900;
+      color: #111;
+      font-size: clamp(18px, 8vmin, 36px);
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
-      user-select:none;
+      line-height: 1;
+      transform: translateY(0px);
     }
 
-    .scoreBox{
-      display:flex;
-      align-items:baseline;
-      gap: 10px;
-      width: 100%;
-      justify-content: space-between;
-      user-select:none;
-    }
-
-    .scoreBig{
-      font-size: 22px;
-      font-weight: 1000;
-      letter-spacing: 0.04em;
-      color: var(--ui-text);
-      text-shadow: 0 1px 0 rgba(255,255,255,0.30);
-    }
-
-    .scoreRight{
-      text-align:right;
+    /* ✅ Rechts: 0p + Highscore darunter, kleiner Abstand */
+    .pointsBlock{
       display:flex;
       flex-direction: column;
-      gap: 2px;
       align-items:flex-end;
+      gap: 4px;
+      user-select:none;
+    }
+
+    .pointsNow{
+      font-weight: 1000;
+      letter-spacing: 0.02em;
       color: var(--ui-text);
-      text-shadow: 0 1px 0 rgba(255,255,255,0.30);
+      text-shadow: 0 1px 0 rgba(0,0,0,0.25);
+      font-size: 44px;
+      line-height: 0.95;
+      font-variant-numeric: tabular-nums;
+    }
+
+    .hiLine{
+      color: var(--ui-text);
+      font-weight: 800;
+      font-size: 14px;
+      line-height: 1.05;
+      opacity: 0.92;
+      text-shadow: 0 1px 0 rgba(0,0,0,0.25);
+      margin-top: 2px;
     }
 
     /* ========= Slider ========= */
@@ -528,11 +555,11 @@
       width:100%;
       height:100%;
       fill: none;
-      stroke: var(--ui-text); /* jetzt schwarz */
+      stroke: var(--ui-text);
       stroke-width: 2.2;
       stroke-linecap: round;
       stroke-linejoin: round;
-      filter: drop-shadow(0 1px 0 rgba(255,255,255,0.30));
+      filter: drop-shadow(0 1px 0 rgba(0,0,0,0.25));
     }
 
     input[type="range"]{
@@ -568,7 +595,40 @@
       cursor: pointer;
     }
 
-    /* ========= Buttons (Basis-Stil) ========= */
+    .startBtn{
+      width: 100%;
+      border: 1px solid var(--btn-border);
+      background: var(--btn-bg);
+      color: var(--btn-text);
+      font-weight: 1000;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+      padding: 14px 16px;
+      border-radius: 14px;
+      cursor: pointer;
+      box-shadow:
+        0 10px 18px rgba(0,0,0,0.25),
+        0 0 0 1px rgba(255,255,255,0.15) inset;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .startBtn:active{
+      transform: translateY(1px) scale(0.99);
+      filter: brightness(0.97);
+    }
+
+    /* ========= DEV Controls ========= */
+    .controls{
+      width: 100%;
+      display:flex;
+      justify-content:center;
+      gap: 12px;
+      padding: 0 6px;
+      margin-top: 6px;
+      flex-wrap: wrap;
+      opacity: 0.95;
+    }
+
     .btn{
       border: 1px solid var(--btn-border);
       background: var(--btn-bg);
@@ -589,33 +649,18 @@
       transform: translateY(1px) scale(0.99);
       filter: brightness(0.97);
     }
-
-    /* START soll genauso aussehen wie die anderen Buttons – nur 100% Breite */
-    .btnStartLike{
-      width: 100%;
-    }
-
-    /* ========= DEV Controls (lassen wir fürs Testen da) ========= */
-    .controls{
-      width: 100%;
-      display:flex;
-      justify-content:center;
-      gap: 12px;
-      padding: 0 6px;
-      margin-top: 6px;
-      flex-wrap: wrap;
-      opacity: 0.95;
-    }
   </style>
 </head>
 
 <body>
   <div class="stage">
 
+    <!-- ===== UI TOP: Titel ===== -->
     <div class="title" aria-label="Titel">
       <h1>DigiKipp</h1>
     </div>
 
+    <!-- ===== Board ===== -->
     <div class="board" id="board">
       <div class="floor" aria-hidden="true"></div>
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
@@ -653,8 +698,10 @@
       <div class="ball" aria-label="Kugel"></div>
     </div>
 
-    <!-- UI Panel bleibt als Layoutcontainer -->
+    <!-- ===== UI PANEL ===== -->
     <div class="uiPanel" aria-label="UI Panel (noch ohne Logik)">
+
+      <!-- Slider -->
       <div class="sliderRow" aria-label="Kippspeed">
         <div class="icon" aria-hidden="true" title="langsam">
           <svg viewBox="0 0 24 24">
@@ -682,25 +729,27 @@
         </div>
       </div>
 
+      <!-- ✅ Kippziel + Quadrat + (00/11)  |  ✅ rechts 0p + Highscore -->
       <div class="uiRow">
-        <div class="uiLabel">Kippziel</div>
-        <div class="targetCard">
-          <div id="targetSquare" class="targetSquare" aria-label="Ziel (Dummy)">7</div>
+        <div style="display:flex; align-items:flex-end; gap: 12px;">
+          <div class="uiLabel">Kippziel</div>
+          <div class="targetCard">
+            <div id="targetSquare" class="targetSquare" aria-label="Ziel (Dummy)"><span>7</span></div>
+            <div id="progressText" class="progressText" aria-label="Progress (Dummy)">(00/11)</div>
+          </div>
+        </div>
+
+        <div class="pointsBlock" aria-label="Punkteblock rechts (Dummy)">
+          <div id="pointsNow" class="pointsNow">0p</div>
+          <div class="hiLine">Highscore: <span id="hiVal">66</span></div>
         </div>
       </div>
 
-      <div class="scoreBox" aria-label="Punkteblock">
-        <div class="scoreBig">Punkte: <span id="scoreVal">0</span></div>
-        <div class="scoreRight">
-          <div class="mini">Ziel: <span id="progressVal">0</span> / 11</div>
-          <div class="mini">Highscore: <span id="hiVal">66</span></div>
-        </div>
-      </div>
-
-      <!-- START: gleicher Stil wie .btn -->
-      <button id="btnStart" class="btn btnStartLike">START</button>
+      <!-- Start / Neu setzen -->
+      <button id="btnStart" class="startBtn">START</button>
     </div>
 
+    <!-- ===== DEV Controls ===== -->
     <div class="controls">
       <button id="btnMix" class="btn">Würfel mischen (12)</button>
       <button id="btnKip50" class="btn">KIP 50% AN/AUS</button>
@@ -722,13 +771,16 @@
     const btnCW     = document.getElementById("btnCW");
     const btnCCW    = document.getElementById("btnCCW");
 
+    // ===== UI (Dummy, nicht verkabelt) =====
     const btnStart = document.getElementById("btnStart");
     const speedSlider = document.getElementById("speedSlider");
 
+    // rein optisch: Buttontext toggeln (ohne irgendeine Spiellogik)
     let startedOnce = false;
     btnStart.addEventListener("click", () => {
       startedOnce = true;
       btnStart.textContent = "ZAHLEN NEU SETZEN";
+      // Keine Logik hier. Nur Optik.
     });
 
     function setBoardSquare(){
@@ -736,6 +788,7 @@
       boardEl.style.height = w + "px";
     }
 
+    // ===== Raster farbig =====
     const cols = ["A","B","C","D","E","F","G","H"];
     function key(r, cLetter){ return `${r}${cLetter}`; }
 
@@ -780,6 +833,7 @@
       grid.dataset.built = "1";
     }
 
+    // ===== Zahlenrendering =====
     function setDot(span, number){
       if(!span) return;
       span.classList.remove("dot");
@@ -833,6 +887,9 @@
       return pool.slice(0, count);
     }
 
+    // =========================================================
+    // LOGIK (Bestückung nur in 100%):
+    // =========================================================
     let planned = [
       [null,null,null,null],
       [null,null,null,null],
@@ -851,7 +908,8 @@
     let faceIndex = 0;
     const rotDeg = [0, 90, 180, 270];
 
-    let plannedDir = +1;
+    // geplante Richtung für Preview
+    let plannedDir = +1; // +1 CW, -1 CCW
 
     const slotTargetsW = [
       wFace.querySelector('[data-slot="S1"] .num > span'),
