Chat 2: Tablet rotbraun.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
-      /* ✅ UI-Tablett: SCHWARZ/DUNKEL @ 6% */
-      --ui-panel-bg: rgba(0,0,0,0.06);
+      /* ✅ UI-Tablett: NUR HIER geändert */
+      --ui-panel-bg: rgba(122, 74, 52, 1);
       --ui-panel-border: rgba(0,0,0,0.35);
 
       --ui-text: #ead7be; /* hellbeige */
