--ui-panel-bg: #4b2e22;

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       --btn-border: rgba(0,0,0,0.35);
 
       /* ✅ UI-Tablett */
-      --ui-panel-bg: rgba(122, 74, 52, 1);
+      --ui-panel-bg: #4b2e22;
       --ui-panel-border: rgba(0,0,0,0.35);
 
       --ui-text: #ead7be; /* hellbeige */
